Allow running the K8s role separately on the master and the worker nodes
Worker nodes will need the kubeadm join command explicitly specified
in the kubernetes_join_command variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,6 +16,9 @@ kubernetes_role: master
 
 kubernetes_kubelet_extra_args: ""
 kubernetes_kubeadm_init_extra_opts: ""
+
+# Specify the kubeadm join command that worker nodes must run in this variable
+kubernetes_join_command: ""
 kubernetes_join_command_extra_opts: ""
 
 kubernetes_allow_pods_on_master: true
