--- a/tasks/node-setup.yml
+++ b/tasks/node-setup.yml
@@ -2,5 +2,6 @@
 - name: Join node to Kubernetes master
   shell: >
     {{ kubernetes_join_command }}
+    {{ kubernetes_join_command_extra_opts }}
     creates=/etc/kubernetes/kubelet.conf
   tags: ['skip_ansible_lint']
