Setup kubeadm to work with crio

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,6 +33,8 @@
     path: /etc/kubernetes/admin.conf
   register: kubernetes_init_stat
 
+- include_tasks: crio-setup.yml
+
 # Set up master.
 - include_tasks: master-setup.yml
   when: kubernetes_role == 'master'
