--- a/tasks/master-setup.yml
+++ b/tasks/master-setup.yml
@@ -6,6 +6,7 @@
     --apiserver-advertise-address={{ kubernetes_apiserver_advertise_address | default(ansible_default_ipv4.address, true) }}
     --kubernetes-version {{ kubernetes_version_kubeadm }}
     --ignore-preflight-errors={{ kubernetes_ignore_preflight_errors }}
+    --config={{ kubeadm_crio_config }}
     {{ kubernetes_kubeadm_init_extra_opts }}
   register: kubeadmin_init
   when: not kubernetes_init_stat.stat.exists
