--- a/tasks/node-setup.yml
+++ b/tasks/node-setup.yml
@@ -3,5 +3,6 @@
   shell: >
     {{ kubernetes_join_command }}
     {{ kubernetes_join_command_extra_opts }}
-    creates=/etc/kubernetes/kubelet.conf
+    --config={{ kubeadm_crio_config }}
+  creates: /etc/kubernetes/kubelet.conf
   tags: ['skip_ansible_lint']
