Revert the kubelet config change for crio
Using a config file with kubelet is a bit more tricky. Just set kubernetes_kubelet_extra_args to:

--container-runtime=remote --cgroup-driver=systemd --container-runtime-endpoint='unix:///var/run/crio/crio.sock' --runtime-request-timeout=5m

until I figure out what to do here.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,7 +33,7 @@
     path: /etc/kubernetes/admin.conf
   register: kubernetes_init_stat
 
-- include_tasks: crio-setup.yml
+#- include_tasks: crio-setup.yml
 
 # Set up master.
 - include_tasks: master-setup.yml
