--- a/tasks/node-setup.yml
+++ b/tasks/node-setup.yml
@@ -3,6 +3,6 @@
   shell: >
     {{ kubernetes_join_command }}
     {{ kubernetes_join_command_extra_opts }}
-    --config={{ kubeadm_crio_config }}
+#    --config={{ kubeadm_crio_config }}
   creates: /etc/kubernetes/kubelet.conf
   tags: ['skip_ansible_lint']
